--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5 {
 /* header */
 
 header nav {
-  width: 691px;
+  width: 100%; 
   vertical-align: top;
   margin-top: 35px;
 }
@@ -292,6 +292,11 @@ footer {
       display: none;
   }
 
+  .middle-img{
+    width: 100%;
+    height: auto;
+  }
+
 }
 
 @media(max-width: 500px){
@@ -320,11 +325,13 @@ footer {
 
 
     header nav a {
-        margin-top: 35px;
+        /* margin-top: 35px; */
         width: 100%;
         height: auto;
         border-top: 1px black solid;
         text-align: center;
+        padding: 20px 0px;
+        margin: 0px;
        
       }
 
@@ -333,9 +340,16 @@ footer {
           flex-direction: column;
           align-items: center;
           width: 100%;
+          border-top: 1pt black solid;
       }
 
       .top-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .bottom-content {
         display: flex;
         flex-direction: column;
         align-items: center;
